X3 C++ PluginFramework

2011-01-18, Zhang Yun Gui <rhcad@hotmail.com>

    * pkg_Core\Modules\ConfigXml\ConfigXmlImpl.h:
    * pkg_Core\Modules\ConfigXml\Cx_ConfigXml.cpp: Delay call CoUninitialize until plugin is unloading.
    
2011-01-15, Zhang Yun Gui <rhcad@hotmail.com>

    * Remove cppunit 1.12.1 include files.
    * Replace StrCpyNW to lstrcpynW (because for VC6 shell32.dll no StrCpyNW entry point).
    * Simplify license note in *.h and *.cpp.
    
    * pkg_Core\Interface\PluginManager\PluginManager.h: add TextUtility.plugin.dll in LoadCorePlugins().
    
    * TextUtility v1.0.0.2:
    * pkg_Core\Modules\TextUtility\Cx_TextUtil.cpp: IsSpaceChar() support '\r' and '\n'.

2011-01-13, Zhang Yun Gui <rhcad@hotmail.com>

    * Move Ix_UIConfig.h to pkg_AppUI. Fix doxyfile files.
    
    * ConfigXml v1.0.0.3: 
    * pkg_Core\Modules\ConfigXml\Cx_XmlSection.cpp: fix default return value of Cx_XmlSection::Setxxx.
    
2011-01-12, Zhang Yun Gui <rhcad@hotmail.com>

    * Rename text files(add .txt).
    * Replace tab char to space char in *.h and *.cpp.
    * Replace LPWSTR to wchar*
    * Move FileUtility/TextUtility/LogWriter/ to pkg_Core, Move Ix_ConfigDBFactory.h to Interface\Database\.
    
    * ConfigDB v1.0.0.2:
    * pkg_Utility\Modules\ConfigDB\Cx_ConfigFactory.cpp: Remove Ix_FileUtility.
        Open access connection readonly if file is readonly.
    * pkg_Utility\Interface\Database\Ix_ConfigDBFactory.h:
    * pkg_Utility\Modules\ConfigDB\Cx_CfgDatabase.h:
    * pkg_Utility\Modules\ConfigDB\Cx_CfgDatabase.cpp: Add readonly param in OpenConnection()
    
2011-01-09, Zhang Yun Gui <rhcad@hotmail.com>

    * ConfigXml v1.0.0.2:
    * pkg_Core\Modules\ConfigXml\ConfigXmlImpl.h: 
        automatic call CoInitializeEx to avoid caller forget it.
    * pkg_Core\Modules\ConfigXml\XmlUtil\XmlUtil.cpp: support MSXML6 and MSXML4.
    * add InitXMLDLL.h for applications to Ensure MSXML correctly initialized.

2011-01-06, Zhang Yun Gui <rhcad@hotmail.com>
