@@ -2,7 +2,8 @@
 // http://sourceforge.net/projects/x3c/
 
 // author: Zhang Yun Gui, Tao Jian Lin
-// v2: 2011.1.5, ooyg: change class-table to hash_map
+// v2: 2011.1.5, ooyg: Change class-table to hash_map
+// v3: 2011.2.4, ooyg: Add filename in MODULEINFO. Add module index in class map.
 
 #ifndef _X3_CORE_OBJECTFACTORY_H
 #define _X3_CORE_OBJECTFACTORY_H
@@ -34,7 +35,8 @@ public:
 
 protected:
     typedef std::vector<XCLSID>         CLSIDS;
-    typedef hash_map<std::string, _XCLASSMETA_ENTRY>    CLSMAP;
+    typedef std::pair<_XCLASSMETA_ENTRY, long>  MAPITEM;    //!< entry+moduleIndex
+    typedef hash_map<std::string, MAPITEM>    CLSMAP;       //!< clsid+item
     
     struct MODULEINFO                   //!< plugin module info
     {
@@ -43,6 +45,7 @@ protected:
         CLSIDS              clsids;     //!< all classes of the plugin
         bool                owned;      //!< the DLL is loaded by this class or not
         bool                inited;     //!< InitializePlugins() has been called or not
+        wchar_t             filename[MAX_PATH];   //!< plugin filename
     };
     
     std::vector<MODULEINFO> m_modules;  //!< all plugin modules
@@ -55,7 +58,7 @@ protected:
     void ReleaseModule(HMODULE hModule);
 
 private:
-    _XCLASSMETA_ENTRY* FindEntry(const XCLSID& clsid);
+    _XCLASSMETA_ENTRY* FindEntry(const XCLSID& clsid, int& moduleIndex);
     bool RegisterClass(int moduleIndex, const _XCLASSMETA_ENTRY& cls);
 };
 
